# misc

./: README.md  REAMDE.md
bert-fine-tuning/: bert_classification.ipynb
coronavirus-earnings-calls/: Coronavirus in Earnings Calls.ipynb  README.md  coronavirus-earnings-graphic.ipynb  scrape.py
medicare-partd-providers/: README.md  prescribing-behavior-part1.ipynb  prescribing-behavior-part2.ipynb
riddler-538/: logic-puzzle-6-21-19.ipynb
ungd-rag/: .gitignore  README.md  Taskfile.yaml  app.py  config.yaml  pyproject.toml
ungd-rag/notebooks/: CheckTokenization.ipynb  RetrievalExamples.ipynb
ungd-rag/scripts/: index.py  preprocess.py
